Cleaning from IndexService split into 2 classes and minor refactoring in other classes.